@@ -72,3 +72,57 @@ Enjoy smoother performance and more FPS 🚀
 
 > Inspired by real testing on multi-CPU Xeon systems with AVX2, ZGC and native JNI agents.
 
+
+##**🎮 How to Add JVM Flags to Minecraft Launcher**
+##**🧩 Cách thêm đối số JVM vào Minecraft**
+>⚙️ This guide works for official Minecraft Launcher, Prism Launcher, GDLauncher, or most custom launchers.
+>⚙️ Hướng dẫn này áp dụng cho Minecraft Launcher chính thức, Prism Launcher, GDLauncher hoặc các launcher tuỳ chỉnh khác.
+
+##**🔧 Step-by-step (English)**
+Open your Minecraft Launcher.
+
+Go to "Installations" tab.
+
+Click "Edit" on the installation you want to modify.
+
+Click "More Options" (or "Show More").
+
+In the "JVM Arguments" box, paste the flags you want (replace the default).
+
+Save and launch the game.
+
+💡 Example:
+-Xmx8G -XX:+UseZGC -XX:+UnlockExperimentalVMOptions ...
+
+
+
+##**🔧 Các bước thực hiện (Tiếng Việt)**
+
+Mở Minecraft Launcher.
+
+Vào tab "Installations" (Cài đặt).
+
+Bấm vào "Edit" (Chỉnh sửa) bản cài đặt bạn muốn tối ưu.
+
+Chọn "More Options" (Tuỳ chọn nâng cao).
+
+Trong phần "JVM Arguments", dán các dòng flag tối ưu (thay thế dòng mặc định).
+
+Lưu lại và chạy game.
+
+💡 Ví dụ:
+-Xmx8G -XX:+UseZGC -XX:+UnlockExperimentalVMOptions ...
+
+##**🧠 Notes / Ghi chú**
+>**💡 English**
+Don't use too many flags at once if you're unsure. Try small groups first.
+Use at least Java 17 to enable modern features like ZGC, jdk.incubator.vector, etc.
+If you're playing modded Minecraft, make sure your launcher is using the correct Java version (e.g. Zulu, OpenJDK, etc).
+
+>**💡 Tiếng Việt**
+Không nên dùng quá nhiều flag nếu bạn không chắc. Hãy thử từng nhóm nhỏ.
+Dùng ít nhất Java 17 để các flag như ZGC, jdk.incubator.vector hoạt động.
+Nếu chơi bản modded, hãy chắc chắn launcher dùng đúng phiên bản Java (Zulu, OpenJDK, v.v.)
+
+
+
